@@ -11,6 +11,13 @@
 
   <body>
     <div>
+      <h1>Export links</h1>
+      <ul>
+        <li><a id="export-text">Plain text</a></li>
+        <li><a id="export-partly-converted">Some values are converted by JSON.stringify.</a></li>
+      </ul>
+    </div>
+    <div>
       <table>
         <caption>Information</caption>
         <tbody>
